Make BW2 overlay use XY overlay scripts

--- a/Stream Tool/Overlays/Black and White/PBWOverlay.html
+++ b/Stream Tool/Overlays/Black and White/PBWOverlay.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Poke BnW Overlay</title>
-    <script src="Resources/PBW2.js" type="module"></script>
+    <script src="../../Resources/Scripts/Overlays.js" type="module"></script>
     <link rel="stylesheet" href="Resources/PBW2.css">
 </head>
 
@@ -97,53 +97,67 @@
               <div class="vsWildStatNumber vsWildStatText" id="vsWildStatNumberHP"></div>
               <div class="vsWildMeter" id="vsWildMeterHP"></div>
             </div>
-  
+
             <div class="vsWildStat" id="vsWildStatAT">
               <div class="vsWildStatName vsWildStatText" locText="statsAttack"></div>
               <div class="vsWildStatNumber vsWildStatText" id="vsWildStatNumberAT"></div>
               <div class="vsWildMeter" id="vsWildMeterAT"></div>
             </div>
-  
+
             <div class="vsWildStat" id="vsWildStatDE">
               <div class="vsWildStatName vsWildStatText" locText="statsDefense"></div>
               <div class="vsWildStatNumber vsWildStatText" id="vsWildStatNumberDE"></div>
               <div class="vsWildMeter" id="vsWildMeterDE"></div>
             </div>
-  
+
             <div class="vsWildStat" id="vsWildStatSA">
               <div class="vsWildStatName vsWildStatText" locText="statsSpAtk"></div>
               <div class="vsWildStatNumber vsWildStatText" id="vsWildStatNumberSA"></div>
               <div class="vsWildMeter" id="vsWildMeterSA"></div>
             </div>
-  
+
             <div class="vsWildStat" id="vsWildStatSD">
               <div class="vsWildStatName vsWildStatText" locText="statsSpDef"></div>
               <div class="vsWildStatNumber vsWildStatText" id="vsWildStatNumberSD"></div>
               <div class="vsWildMeter" id="vsWildMeterSD"></div>
             </div>
-  
+
             <div class="vsWildStat" id="vsWildStatSP">
               <div class="vsWildStatName vsWildStatText" locText="statsSpeed"></div>
               <div class="vsWildStatNumber vsWildStatText" id="vsWildStatNumberSP"></div>
               <div class="vsWildMeter" id="vsWildMeterSP"></div>
             </div>
-  
+
             <div class="vsWildStat" id="vsWildStatTS">
               <div class="vsWildStatName vsWildStatText" locText="statsTotal"></div>
               <div class="vsWildStatNumber vsWildStatText" id="vsWildStatNumberTS"></div>
               <div class="vsWildMeter" id="vsWildMeterTS"></div>
             </div>
-  
-          </div>
+
+        </div>
 
     </div>
 
     <div id="botPokes">
 
         <div class="pokeDiv">
+
             <div class="pokeImgDiv">
                 <img class="pokeImg">
             </div>
+
+            <div class="pokeDivMask">
+                <div class="pokeHpDiv">
+                    <div class="pokeHpBefore"></div>
+                    <div class="pokeHpText"></div>
+                    <div class="pokeHpAfter"></div>
+                    <div class="pokeHpBar">
+                        <div class="hpBar pokeHpBarTotal"></div>
+                        <div class="hpBar pokeHpBarCurrent"></div>
+                    </div>
+                </div>
+            </div>
+
             <div class="pokeTexts">
                 <div class="pokeLvlDiv">
                     <div class="pokeLvlText" locText="pokeLvl"></div>
@@ -155,12 +169,27 @@
                     <div class="pokeSpecies"></div>
                 </div>
             </div>
+
         </div>
 
         <div class="pokeDiv">
+
             <div class="pokeImgDiv">
                 <img class="pokeImg">
             </div>
+
+            <div class="pokeDivMask">
+                <div class="pokeHpDiv">
+                    <div class="pokeHpBefore"></div>
+                    <div class="pokeHpText"></div>
+                    <div class="pokeHpAfter"></div>
+                    <div class="pokeHpBar">
+                        <div class="hpBar pokeHpBarTotal"></div>
+                        <div class="hpBar pokeHpBarCurrent"></div>
+                    </div>
+                </div>
+            </div>
+
             <div class="pokeTexts">
                 <div class="pokeLvlDiv">
                     <div class="pokeLvlText" locText="pokeLvl"></div>
@@ -172,12 +201,27 @@
                     <div class="pokeSpecies"></div>
                 </div>
             </div>
+
         </div>
 
         <div class="pokeDiv">
+
             <div class="pokeImgDiv">
                 <img class="pokeImg">
             </div>
+
+            <div class="pokeDivMask">
+                <div class="pokeHpDiv">
+                    <div class="pokeHpBefore"></div>
+                    <div class="pokeHpText"></div>
+                    <div class="pokeHpAfter"></div>
+                    <div class="pokeHpBar">
+                        <div class="hpBar pokeHpBarTotal"></div>
+                        <div class="hpBar pokeHpBarCurrent"></div>
+                    </div>
+                </div>
+            </div>
+
             <div class="pokeTexts">
                 <div class="pokeLvlDiv">
                     <div class="pokeLvlText" locText="pokeLvl"></div>
@@ -189,12 +233,27 @@
                     <div class="pokeSpecies"></div>
                 </div>
             </div>
+
         </div>
 
         <div class="pokeDiv">
+
             <div class="pokeImgDiv">
                 <img class="pokeImg">
             </div>
+
+            <div class="pokeDivMask">
+                <div class="pokeHpDiv">
+                    <div class="pokeHpBefore"></div>
+                    <div class="pokeHpText"></div>
+                    <div class="pokeHpAfter"></div>
+                    <div class="pokeHpBar">
+                        <div class="hpBar pokeHpBarTotal"></div>
+                        <div class="hpBar pokeHpBarCurrent"></div>
+                    </div>
+                </div>
+            </div>
+
             <div class="pokeTexts">
                 <div class="pokeLvlDiv">
                     <div class="pokeLvlText" locText="pokeLvl"></div>
@@ -206,12 +265,27 @@
                     <div class="pokeSpecies"></div>
                 </div>
             </div>
+
         </div>
 
         <div class="pokeDiv">
+
             <div class="pokeImgDiv">
                 <img class="pokeImg">
             </div>
+
+            <div class="pokeDivMask">
+                <div class="pokeHpDiv">
+                    <div class="pokeHpBefore"></div>
+                    <div class="pokeHpText"></div>
+                    <div class="pokeHpAfter"></div>
+                    <div class="pokeHpBar">
+                        <div class="hpBar pokeHpBarTotal"></div>
+                        <div class="hpBar pokeHpBarCurrent"></div>
+                    </div>
+                </div>
+            </div>
+
             <div class="pokeTexts">
                 <div class="pokeLvlDiv">
                     <div class="pokeLvlText" locText="pokeLvl"></div>
@@ -223,12 +297,27 @@
                     <div class="pokeSpecies"></div>
                 </div>
             </div>
+
         </div>
 
         <div class="pokeDiv">
+
             <div class="pokeImgDiv">
                 <img class="pokeImg">
             </div>
+
+            <div class="pokeDivMask">
+                <div class="pokeHpDiv">
+                    <div class="pokeHpBefore"></div>
+                    <div class="pokeHpText"></div>
+                    <div class="pokeHpAfter"></div>
+                    <div class="pokeHpBar">
+                        <div class="hpBar pokeHpBarTotal"></div>
+                        <div class="hpBar pokeHpBarCurrent"></div>
+                    </div>
+                </div>
+            </div>
+
             <div class="pokeTexts">
                 <div class="pokeLvlDiv">
                     <div class="pokeLvlText" locText="pokeLvl"></div>
@@ -239,6 +328,39 @@
                     <div class="pokeGender"></div>
                     <div class="pokeSpecies"></div>
                 </div>
+            </div>
+
+        </div>
+
+    </div>
+
+    <div id="battleDiv">
+
+        <div id="battlePlayerTeam" class="battleTeam">
+            <div class="battleActiveBar" id="battleActiveBarPlayer"></div>
+            <div class="battleBotBar" id="battleStandbyBarPlayer"></div>
+        </div>
+        <div id="battleEnemyTeam" class="battleTeam">
+            <div class="battleActiveBar" id="battleActiveBarEnemy"></div>
+            <div class="battleBotBar" id="battleStandbyBarEnemy"></div>
+        </div>
+
+    </div>
+
+    <div id="enemyNameIntroDiv">
+
+        <div id="enemyNameIntroContent">
+            <div id="enemyNameIntroTopBar" class="enemyNameIntroBar"></div>
+            <div id="enemyNameIntroTexts">
+                <span id="enemyNameIntroVs">VS</span>
+                <span id="enemyNameIntroTitle"></span>
+                <span id="enemyNameIntroName"></span>
+            </div>
+            <div id="enemyNameIntroBotBar" class="enemyNameIntroBar"></div>
+            <div id="enemyNameIntroPokeCountDiv">
+                <img id="enemyNameIntroPokeImg" src="../../Resources/Assets/None.png" alt="">
+                <div id="enemyNameIntroEqual">=</div>
+                <div id="enemyNameIntroPokeCount"></div>
             </div>
         </div>
 
