--- a/Stream Tool/Overlays/X and Y/XY Overlay.html
+++ b/Stream Tool/Overlays/X and Y/XY Overlay.html
@@ -164,6 +164,12 @@
               <div class="vsWildMeter" id="vsWildMeterSP"></div>
             </div>
 
+            <div class="vsWildStat" id="vsWildStatTS">
+                <div class="vsWildStatName vsWildStatText" locText="statsTotal"></div>
+                <div class="vsWildStatNumber vsWildStatText" id="vsWildStatNumberTS"></div>
+                <div class="vsWildMeter" id="vsWildMeterTS"></div>
+            </div>
+
           </div>
 
     </div>
