Add placeholder BW2 OoC hp bar

--- a/Stream Tool/Overlays/Black and White/PBWOverlay.html
+++ b/Stream Tool/Overlays/Black and White/PBWOverlay.html
@@ -148,9 +148,9 @@
 
             <div class="pokeDivMask">
                 <div class="pokeHpDiv">
-                    <div class="pokeHpBefore"></div>
-                    <div class="pokeHpText"></div>
-                    <div class="pokeHpAfter"></div>
+                    <div class="pokeHpTextDiv">
+                        <div class="pokeHpText"></div>
+                    </div>
                     <div class="pokeHpBar">
                         <div class="hpBar pokeHpBarTotal"></div>
                         <div class="hpBar pokeHpBarCurrent"></div>
@@ -180,9 +180,9 @@
 
             <div class="pokeDivMask">
                 <div class="pokeHpDiv">
-                    <div class="pokeHpBefore"></div>
-                    <div class="pokeHpText"></div>
-                    <div class="pokeHpAfter"></div>
+                    <div class="pokeHpTextDiv">
+                        <div class="pokeHpText"></div>
+                    </div>
                     <div class="pokeHpBar">
                         <div class="hpBar pokeHpBarTotal"></div>
                         <div class="hpBar pokeHpBarCurrent"></div>
@@ -212,9 +212,9 @@
 
             <div class="pokeDivMask">
                 <div class="pokeHpDiv">
-                    <div class="pokeHpBefore"></div>
-                    <div class="pokeHpText"></div>
-                    <div class="pokeHpAfter"></div>
+                    <div class="pokeHpTextDiv">
+                        <div class="pokeHpText"></div>
+                    </div>
                     <div class="pokeHpBar">
                         <div class="hpBar pokeHpBarTotal"></div>
                         <div class="hpBar pokeHpBarCurrent"></div>
@@ -244,9 +244,9 @@
 
             <div class="pokeDivMask">
                 <div class="pokeHpDiv">
-                    <div class="pokeHpBefore"></div>
-                    <div class="pokeHpText"></div>
-                    <div class="pokeHpAfter"></div>
+                    <div class="pokeHpTextDiv">
+                        <div class="pokeHpText"></div>
+                    </div>
                     <div class="pokeHpBar">
                         <div class="hpBar pokeHpBarTotal"></div>
                         <div class="hpBar pokeHpBarCurrent"></div>
@@ -276,9 +276,9 @@
 
             <div class="pokeDivMask">
                 <div class="pokeHpDiv">
-                    <div class="pokeHpBefore"></div>
-                    <div class="pokeHpText"></div>
-                    <div class="pokeHpAfter"></div>
+                    <div class="pokeHpTextDiv">
+                        <div class="pokeHpText"></div>
+                    </div>
                     <div class="pokeHpBar">
                         <div class="hpBar pokeHpBarTotal"></div>
                         <div class="hpBar pokeHpBarCurrent"></div>
@@ -308,9 +308,9 @@
 
             <div class="pokeDivMask">
                 <div class="pokeHpDiv">
-                    <div class="pokeHpBefore"></div>
-                    <div class="pokeHpText"></div>
-                    <div class="pokeHpAfter"></div>
+                    <div class="pokeHpTextDiv">
+                        <div class="pokeHpText"></div>
+                    </div>
                     <div class="pokeHpBar">
                         <div class="hpBar pokeHpBarTotal"></div>
                         <div class="hpBar pokeHpBarCurrent"></div>
