Show poke on loading sprites message

--- a/Stream Tool/Resources/GUI.html
+++ b/Stream Tool/Resources/GUI.html
@@ -347,7 +347,7 @@
 
 <!-- stuff that will get overlayed on the entire screen -->
 <div id="notifDiv"></div>
-<div id="loadingImgsMessage" locText="loadingImgsMessage"></div>
+<div id="loadingImgsMessage"></div>
 
 
 <!-- stuff that will get moved around -->
