Add current pokedex to catches button

--- a/Stream Tool/Resources/GUI.html
+++ b/Stream Tool/Resources/GUI.html
@@ -58,14 +58,18 @@
 
         <div class="catchesButtRow">
 
-          <button id="clearCatchesButt" class="updateButt">
+          <button id="clearCatchesButt" class="updateButt" locTitle="deleteCatchesButtTitle">
             <load-svg src="SVGs/Cross.svg" class="svgIcon"></load-svg>
-            <div id="updateCatchesText" locText="deleteCatchesButt"></div>
+            <div locText="deleteCatchesButt"></div>
           </button>
 
-          <button id="updateCatchesButt" class="updateButt">
+          <button id="updateCatchesButt" class="updateButt" locTitle="updateCatchesButtTitle">
             <load-svg src="SVGs/Check.svg" class="svgIcon"></load-svg>
             <div id="updateCatchesText" locText="updateCatchesButt"></div>
+          </button>
+
+          <button id="pokedexCatchesButt" class="updateButt" locTitle="pokedexCatchesButtTitle">
+            <div locText="pokedexCatchesButt"></div>
           </button>
 
         </div>
