Confirmation dialogue script, add it to catches buttons

--- a/Stream Tool/Resources/GUI.html
+++ b/Stream Tool/Resources/GUI.html
@@ -353,6 +353,28 @@
 <div id="notifDiv"></div>
 <div id="loadingImgsMessage"></div>
 
+<dialog id="confModal">
+  <div id="confModalContent">
+
+    <div id="confModalTitle"></div>
+    <div id="confModalDesc"></div>
+    <div class="teamButtRegion">
+
+      <button id="confModalGoBack" class="updateButt">
+        <load-svg src="SVGs/Cross.svg" class="svgIcon"></load-svg>
+        <div locText="confModalGoBack"></div>
+      </button>
+
+      <button id="confModalAccept" class="updateButt">
+        <load-svg src="SVGs/Check.svg" class="svgIcon"></load-svg>
+        <div id="confModalAcceptText"></div>
+      </button>
+
+    </div>
+
+  </div>
+</dialog>
+
 
 <!-- stuff that will get moved around -->
 <div popover id="pokeFinder" class="finder">
