--- a/Stream Tool/Resources/GUI.html
+++ b/Stream Tool/Resources/GUI.html
@@ -102,12 +102,12 @@
         <div id="playerStats">
 
           <div class="statDiv" locTitle="playerCatchesNumTitle">
-            <load-svg src="SVGs/Pokeball.svg" class="statsPokeballIcon statIcon" id="statsCatchesIcon"></load-svg>
+            <load-svg src="SVGs/Pokeball.svg" tabindex="0" class="statsPokeballIcon statIcon" id="statsCatchesIcon"></load-svg>
             <input type="number" id="catchesInput" class="statInput textInput mousetrap" value="0">
           </div>
 
           <div class="statDiv" locTitle="playerDeathsNumTitle">
-            <load-svg src="SVGs/Skull.svg" class="skullIcon statIcon" id="statsDeathsIcon"></load-svg>
+            <load-svg src="SVGs/Skull.svg" tabindex="0" class="skullIcon statIcon" id="statsDeathsIcon"></load-svg>
             <input type="number" id="deathsInput" class="statInput textInput mousetrap" value="0">
           </div>
 
@@ -125,10 +125,10 @@
         <div class="vsWildTopRow">
 
           <div>
-            <div class="selector pokeSelector" tabindex="-1" locTitle="pokeSelectTitle">
-            <img class="pokeSelectorIcon" alt="">
-            <div class="pokeSelectorText"></div>
-            </div>
+            <button class="selector pokeSelector" locTitle="pokeSelectTitle">
+              <img class="pokeSelectorIcon" alt="">
+              <div class="pokeSelectorText"></div>
+            </button>
           </div>
 
           <select class="pokeForm" locTitle="pokeFormTitle">
@@ -333,7 +333,7 @@
               </div>
 
               <div id="settingsButtonSection">
-                <button class="settingsButton" id="restoreWindowButt" tabindex="-1" locTitle="restoreWindowTitle" locText="restoreWindow"></button>
+                <button class="settingsButton" id="restoreWindowButt" tabindex="0" locTitle="restoreWindowTitle" locText="restoreWindow"></button>
               </div>
 
             </div>
