Separate dex data to script and folders

--- a/Stream Tool/Resources/GUI.html
+++ b/Stream Tool/Resources/GUI.html
@@ -8,9 +8,9 @@
   <link rel="stylesheet" href="CSS/GUI.css">
   <script src="Scripts/GUI/External Libraries/mousetrap.min.js" defer></script>
   <script src="Scripts/GUI/External Libraries/encoding.min.js" defer></script>
-  <script src="Scripts/GUI/@pkmn/dex.js" defer></script>
-  <script src="Scripts/GUI/@pkmn/data.js" defer></script>
-  <script src="Scripts/GUI/@pkmn/img.js" defer></script>
+  <script src="Scripts/GUI/External Libraries/pkmn/dex.js" defer></script>
+  <script src="Scripts/GUI/External Libraries/pkmn/data.js" defer></script>
+  <script src="Scripts/GUI/External Libraries/pkmn/img.js" defer></script>
   <script src="Scripts/GUI.js" type="module"></script>
 </head>
   
