Add force full dex setting

--- a/Stream Tool/Resources/GUI.html
+++ b/Stream Tool/Resources/GUI.html
@@ -308,6 +308,11 @@
                 <select id="gameSelect" class="settingsSelect" locTitle="gameSelectTitle"></select>
                 <select id="versionSelect" class="settingsSelect" locTitle="gameVersionTitle"></select>
               </div>
+
+              <div class="settingBox" locTitle="settingFullDexTitle">
+                <input type="checkbox" id="settingFullDexInput" class="settingsCheck">
+                <label for="settingFullDexInput" class="settingsText" locText="settingFullDex"></label>
+              </div>
   
             </div>
 
@@ -315,13 +320,13 @@
 
               <div class="settingsTitle" locText="windowSettings"></div>
 
-              <div class="settingBox" locTitle="alwaysOnTopTitle" title="">
-                <input type="checkbox" id="alwaysOnTop" class="settingsCheck" tabindex="-1">
+              <div class="settingBox" locTitle="alwaysOnTopTitle">
+                <input type="checkbox" id="alwaysOnTop" class="settingsCheck">
                 <label for="alwaysOnTop" class="settingsText" locText="alwaysOnTop"></label>
               </div>
 
               <div class="settingBox" locTitle="windowResizeTitle">
-                <input type="checkbox" id="resizableWindow" class="settingsCheck" tabindex="-1">
+                <input type="checkbox" id="resizableWindow" class="settingsCheck">
                 <label for="resizableWindow" class="settingsText" locText="windowResize"></label>
               </div>
 
