Update auto icon

--- a/Stream Tool/Resources/GUI.html
+++ b/Stream Tool/Resources/GUI.html
@@ -82,14 +82,17 @@
 
         <div class="teamButtRegion">
 
-          <button class="updateButt battleTypeButt" id="bTypeButt" tabindex="-1" locText="bTypeButtNone" locTitle="bTypeButtTitle"></button>
+          <button class="updateButt battleTypeButt" id="bTypeButt" locText="bTypeButtNone" locTitle="bTypeButtTitle"></button>
 
           <button id="updateTeamButt" class="updateButt">
             <load-svg src="SVGs/Check.svg" class="svgIcon"></load-svg>
             <div id="updateTeamText" locText="pokeUpdateButt"></div>
           </button>
 
-          <button class="updateButt citraButtOff" id="citraButt" tabindex="-1" locText="autoUpdateButtOff" locTitle="autoUpdateButtTitle"></button>
+          <button class="updateButt citraButtOff" id="citraButt" locTitle="autoUpdateButtTitle">
+            <load-svg src="SVGs/Reload.svg" tabindex="0" class="svgIcon"></load-svg>
+            <div id="citraButtText" locText="autoUpdateButtOff"></div>
+          </button>
 
         </div>
 
