Simplified party overlay element to a single responsive file

--- a/Stream Tool/Overlays/Simple Elements/party.html
+++ b/Stream Tool/Overlays/Simple Elements/party.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <title>Pokemon 3x2 Overlay</title>
     <script src="../../Resources/Scripts/Overlays.js" type="module"></script>
-    <link rel="stylesheet" href="Resources/party_3x2.css">
+    <link rel="stylesheet" href="Resources/party.css">
 </head>
 
 <body>
 
 <div id="content">
 
-    <div id="topPokes">
+    <div id="partyPokes">
 
         <div class="pokeDiv">
 
@@ -138,10 +138,6 @@
             </div>
 
         </div>
-        
-    </div>
-
-    <div id="botPokes">
 
         <div class="pokeDiv">
 
