Add auto-update help button

--- a/Stream Tool/Resources/GUI.html
+++ b/Stream Tool/Resources/GUI.html
@@ -94,6 +94,8 @@
             <div id="citraButtText" locText="autoUpdateButtOff"></div>
           </button>
 
+          <button class="updateButt" id="autoHelpButt" locTitle="autoHelpButtTitle">?</button>
+
         </div>
 
       </div>
