Add Dex update button, remove dex libs from repo

--- a/Stream Tool/Resources/GUI.html
+++ b/Stream Tool/Resources/GUI.html
@@ -8,12 +8,12 @@
   <link rel="stylesheet" href="CSS/GUI.css">
   <script src="Scripts/GUI/External Libraries/mousetrap.min.js" defer></script>
   <script src="Scripts/GUI/External Libraries/encoding.min.js" defer></script>
-  <script src="Scripts/GUI/External Libraries/pkmn/dex.js" defer></script>
+<!--   <script src="Scripts/GUI/External Libraries/pkmn/dex.js" defer></script>
   <script src="Scripts/GUI/External Libraries/pkmn/data.js" defer></script>
-  <script src="Scripts/GUI/External Libraries/pkmn/img.js" defer></script>
+  <script src="Scripts/GUI/External Libraries/pkmn/img.js" defer></script> -->
   <script src="Scripts/GUI.js" type="module"></script>
 </head>
-  
+
 <body>
 
 <div id="viewport"> <!-- so we can move the viewport easily -->
@@ -347,13 +347,19 @@
               </div>
 
               <div id="settingsButtonSection">
-                <button class="settingsButton" id="restoreWindowButt" tabindex="0" locTitle="restoreWindowTitle" locText="restoreWindow"></button>
+                <button class="settingsButton" id="restoreWindowButt" locTitle="restoreWindowTitle" locText="restoreWindow"></button>
               </div>
 
               <div class="settingsTitle" locText="appSettingsTitle"></div>
 
-
-              <button class="settingsButton" id="gitUpdateButt" locText="gitUpdateSettingsButt" locTitle="gitUpdateSettingsButtTitle"></button>
+              <div class="settingsSection">
+                <div>
+                  <button class="settingsButton" id="dexUpdateButt" locText="dexUpdateSettingsButt" locTitle="dexUpdateSettingsButtTitle"></button>
+                  <div id="dexUpdateDays" class="settingsButtonTopText"></div>
+                </div>
+                <button class="settingsButton" id="gitUpdateButt" locText="gitUpdateSettingsButt" locTitle="gitUpdateSettingsButtTitle"></button>
+              </div>
+              
 
             </div>
 
