Check if there's a new Dex update

--- a/Stream Tool/Resources/GUI.html
+++ b/Stream Tool/Resources/GUI.html
@@ -8,9 +8,6 @@
   <link rel="stylesheet" href="CSS/GUI.css">
   <script src="Scripts/GUI/External Libraries/mousetrap.min.js" defer></script>
   <script src="Scripts/GUI/External Libraries/encoding.min.js" defer></script>
-<!--   <script src="Scripts/GUI/External Libraries/pkmn/dex.js" defer></script>
-  <script src="Scripts/GUI/External Libraries/pkmn/data.js" defer></script>
-  <script src="Scripts/GUI/External Libraries/pkmn/img.js" defer></script> -->
   <script src="Scripts/GUI.js" type="module"></script>
 </head>
 
@@ -355,7 +352,7 @@
               <div class="settingsSection">
                 <div>
                   <button class="settingsButton" id="dexUpdateButt" locText="dexUpdateSettingsButt" locTitle="dexUpdateSettingsButtTitle"></button>
-                  <div id="dexUpdateDays" class="settingsButtonTopText"></div>
+                  <div id="dexUpdateText" class="settingsButtonTopText"></div>
                 </div>
                 <button class="settingsButton" id="gitUpdateButt" locText="gitUpdateSettingsButt" locTitle="gitUpdateSettingsButtTitle"></button>
               </div>
