Add clear asset cache button

--- a/Stream Tool/Resources/GUI.html
+++ b/Stream Tool/Resources/GUI.html
@@ -354,9 +354,9 @@
                   <button class="settingsButton" id="dexUpdateButt" locText="dexUpdateSettingsButt" locTitle="dexUpdateSettingsButtTitle"></button>
                   <div id="dexUpdateText" class="settingsButtonTopText"></div>
                 </div>
+                <button class="settingsButton" id="killCacheButt" locText="killCacheSettingsButt" locTitle="killCacheSettingsButtTitle"></button>
                 <button class="settingsButton" id="gitUpdateButt" locText="gitUpdateSettingsButt" locTitle="gitUpdateSettingsButtTitle"></button>
               </div>
-              
 
             </div>
 
