Badge overlay script non-standard badge support

--- a/Stream Tool/Overlays/X and Y/XY Overlay.html
+++ b/Stream Tool/Overlays/X and Y/XY Overlay.html
@@ -25,38 +25,38 @@
 
             <div id="badgesTop">
                 <div class="badgeDiv">
-                    <img src="../../Resources/Assets/Badges/6/XY/1.png" id="badge1" class="badge" alt="">
+                    <img src="../../Resources/Assets/Badges/6/XY/1.png" class="badge" alt="">
                     <img src="Resources/Images/Badge BGs/1.png" class="emptyBadge" alt="">
                 </div>
                 <div class="badgeDiv">
-                    <img src="../../Resources/Assets/Badges/6/XY/2.png" id="badge1" class="badge" alt="">
+                    <img src="../../Resources/Assets/Badges/6/XY/2.png" class="badge" alt="">
                     <img src="Resources/Images/Badge BGs/2.png" class="emptyBadge" alt="">
                 </div>
                 <div class="badgeDiv">
-                    <img src="../../Resources/Assets/Badges/6/XY/3.png" id="badge1" class="badge" alt="">
+                    <img src="../../Resources/Assets/Badges/6/XY/3.png" class="badge" alt="">
                     <img src="Resources/Images/Badge BGs/3.png" class="emptyBadge" alt="">
                 </div>
                 <div class="badgeDiv">
-                    <img src="../../Resources/Assets/Badges/6/XY/4.png" id="badge1" class="badge" alt="">
+                    <img src="../../Resources/Assets/Badges/6/XY/4.png" class="badge" alt="">
                     <img src="Resources/Images/Badge BGs/4.png" class="emptyBadge" alt="">
                 </div>
             </div>
 
             <div id="badgesBot">
                 <div class="badgeDiv">
-                    <img src="../../Resources/Assets/Badges/6/XY/5.png" id="badge1" class="badge" alt="">
+                    <img src="../../Resources/Assets/Badges/6/XY/5.png" class="badge" alt="">
                     <img src="Resources/Images/Badge BGs/5.png" class="emptyBadge" alt="">
                 </div>
                 <div class="badgeDiv">
-                    <img src="../../Resources/Assets/Badges/6/XY/6.png" id="badge1" class="badge" alt="">
+                    <img src="../../Resources/Assets/Badges/6/XY/6.png" class="badge" alt="">
                     <img src="Resources/Images/Badge BGs/6.png" class="emptyBadge" alt="">
                 </div>
                 <div class="badgeDiv">
-                    <img src="../../Resources/Assets/Badges/6/XY/7.png" id="badge1" class="badge" alt="">
+                    <img src="../../Resources/Assets/Badges/6/XY/7.png" class="badge" alt="">
                     <img src="Resources/Images/Badge BGs/7.png" class="emptyBadge" alt="">
                 </div>
                 <div class="badgeDiv">
-                    <img src="../../Resources/Assets/Badges/6/XY/8.png" id="badge1" class="badge" alt="">
+                    <img src="../../Resources/Assets/Badges/6/XY/8.png" class="badge" alt="">
                     <img src="Resources/Images/Badge BGs/8.png" class="emptyBadge" alt="">
                 </div>
             </div>
