--- a/Stream Tool/Overlays/Omega Ruby and Alpha Sapphire/ORAS Overlay.html
+++ b/Stream Tool/Overlays/Omega Ruby and Alpha Sapphire/ORAS Overlay.html
@@ -25,38 +25,38 @@
 
             <div id="badgesTop">
                 <div class="badgeDiv">
-                    <img src="../../Resources/Assets/Badges/6/ORAS/1.png" id="badge1" class="badge" alt="">
+                    <img src="../../Resources/Assets/Badges/6/ORAS/1.png" class="badge" alt="">
                     <img src="Resources/Images/Badge BGs/1.png" class="emptyBadge" alt="">
                 </div>
                 <div class="badgeDiv">
-                    <img src="../../Resources/Assets/Badges/6/ORAS/2.png" id="badge1" class="badge" alt="">
+                    <img src="../../Resources/Assets/Badges/6/ORAS/2.png" class="badge" alt="">
                     <img src="Resources/Images/Badge BGs/2.png" class="emptyBadge" alt="">
                 </div>
                 <div class="badgeDiv">
-                    <img src="../../Resources/Assets/Badges/6/ORAS/3.png" id="badge1" class="badge" alt="">
+                    <img src="../../Resources/Assets/Badges/6/ORAS/3.png" class="badge" alt="">
                     <img src="Resources/Images/Badge BGs/3.png" class="emptyBadge" alt="">
                 </div>
                 <div class="badgeDiv">
-                    <img src="../../Resources/Assets/Badges/6/ORAS/4.png" id="badge1" class="badge" alt="">
+                    <img src="../../Resources/Assets/Badges/6/ORAS/4.png" class="badge" alt="">
                     <img src="Resources/Images/Badge BGs/4.png" class="emptyBadge" alt="">
                 </div>
             </div>
 
             <div id="badgesBot">
                 <div class="badgeDiv">
-                    <img src="../../Resources/Assets/Badges/6/ORAS/5.png" id="badge1" class="badge" alt="">
+                    <img src="../../Resources/Assets/Badges/6/ORAS/5.png" class="badge" alt="">
                     <img src="Resources/Images/Badge BGs/5.png" class="emptyBadge" alt="">
                 </div>
                 <div class="badgeDiv">
-                    <img src="../../Resources/Assets/Badges/6/ORAS/6.png" id="badge1" class="badge" alt="">
+                    <img src="../../Resources/Assets/Badges/6/ORAS/6.png" class="badge" alt="">
                     <img src="Resources/Images/Badge BGs/6.png" class="emptyBadge" alt="">
                 </div>
                 <div class="badgeDiv">
-                    <img src="../../Resources/Assets/Badges/6/ORAS/7.png" id="badge1" class="badge" alt="">
+                    <img src="../../Resources/Assets/Badges/6/ORAS/7.png" class="badge" alt="">
                     <img src="Resources/Images/Badge BGs/7.png" class="emptyBadge" alt="">
                 </div>
                 <div class="badgeDiv">
-                    <img src="../../Resources/Assets/Badges/6/ORAS/8.png" id="badge1" class="badge" alt="">
+                    <img src="../../Resources/Assets/Badges/6/ORAS/8.png" class="badge" alt="">
                     <img src="Resources/Images/Badge BGs/8.png" class="emptyBadge" alt="">
                 </div>
             </div>
